# Tofula

./: .gitignore  ARCHITECTURE.md  CLEANUP_SUMMARY.md  QUICKSTART.md  README.md  RESTRUCTURE_SUMMARY.md  pyproject.toml  run_backend.sh  setup.sh
backend/: .env.example  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py
backend/app/core/: __init__.py  config.py  dependencies.py
backend/app/models/: __init__.py  database.py
backend/app/schemas/: __init__.py  personalized_story.py  story_templates.py
backend/app/services/: __init__.py  database_service.py  storage_service.py  tofula_service.py
backend/tofula_pipeline/: main.py
backend/tofula_pipeline/prompts/system/: illustration.txt  outline.txt  polish.txt
backend/tofula_pipeline/src/: config.py  llm_factory.py  pdf_export.py  pipeline.py  prompt_loader.py  structures.py
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(marketing)/: page.tsx
frontend/app/(studio)/login/: page.tsx
frontend/components/layout/: PageShell.tsx  SiteFooter.tsx  SiteHeader.tsx
frontend/components/stories/: CustomizationPanel.tsx  StoryCard.tsx
frontend/components/studio/: StudioGuard.tsx
frontend/lib/: api.ts
tofula/: example_inputs.json  main.py
tofula/prompts/system/: draft.txt  moderation.txt  template.txt
tofula/prompts/user/: illustration.txt  moderation.txt  polish.txt  template.txt
tofula/src/: llm_factory.py  pdf_export.py  pipeline.py  prompt_loader.py
(+15 files in other folders)
